--- a/css/screen.css
+++ b/css/screen.css
@@ -161,9 +161,11 @@ img {
     padding: 16px 32px;
     transition-duration: .25s;
     transition-timing-function: ease-in-out;
-    background: linear-gradient(to right, #033AA7 0%, #0053FB 51%, #033AA7 100%);
+    background: var(--lead-text-color);
     background-size: 200% auto;
     box-shadow: inset 0 0 0 1px rgba(142,199,255,.2), 0 0 10px rgba(17,149,255,.30) ;
+
+    margin-top: 30px;
 }
 
 .c-link-cta,
