--- a/css/screen.css
+++ b/css/screen.css
@@ -37,7 +37,7 @@
 :root{
 
     /* Text colors */
-    --lead-text-color:rgb(132,201,209);
+    --lead-text-color:rgb(132, 201, 209);
 
    /* Global colors */
    --global-color-alpha-light: #4F95FF;
@@ -192,7 +192,18 @@ img {
     border-radius: 50px;
     left: 0;
     top: 0;
+    border: 1px solid var(--lead-text-color);
+    padding-left: 30px;
+    font-size: 1.1rem;
 }
+
+
+
+/*BUTTON*/
+
+
+
+
 /*
     Component: Lead
     ---
