--- a/css/screen.css
+++ b/css/screen.css
@@ -150,7 +150,7 @@ img {
     Small cta link with custom animation
 */
 
-.c-link-cta {
+.c-button {
     display: inline-block;
     text-decoration: none;
     text-transform: uppercase;
@@ -168,13 +168,13 @@ img {
     margin-top: 30px;
 }
 
-.c-link-cta,
-.c-link-cta:visited,
-.c-link-cta:active {
+.c-button,
+.c-button:visited,
+.c-button:active {
     color: #ffffff;
 }
 
-.c-link-cta:hover {
+.c-button:hover {
     color: #fff;
     background-position: right center;
     box-shadow: inset 0 0 0 1px rgba(142,199,255,.4), 0 0 10px rgba(17,149,255,.8) ;
