--- a/css/screen.css
+++ b/css/screen.css
@@ -167,7 +167,7 @@ img {
    
     background: var(--lead-theme-color);
     background-size: 200% auto;
-
+    overflow: hidden;
 
     /*Hover animation*/
     box-shadow: inset 0 0 0 0  var(--lead-theme-color-x-dark) ;
@@ -185,19 +185,48 @@ img {
     color: #ffffff;
     
     background: var(--lead-theme-color-x-dark);
+
+    
+    box-shadow: inset 300px 0 0 0 var(--lead-theme-color-x-dark);
+
+    animation: shake 0.8s ease-in ;
+    
     
 }
+
+@keyframes shake{
+
+    0%{
+        transform: translate(0);
+    }
+    20%,
+    40%,
+    60%,
+    80%{
+        transform: translate(.8em);
+        box-shadow: 0px 6px 20px rgba(0, 0, 0, 0.5);
+    }
+    10%,
+    30%,
+    50%{
+        transform: translate(-2em);
+    }
+    70%,
+    100%{
+        transform: translate(0);
+    }
+}
+
 
 
 .c-button:hover {
-    color: #fff;
-    
+  /*hover animation*/ 
     box-shadow: inset 300px 0 0 0 var(--lead-theme-color-x-dark);
-}
+
 
 /*INPUT*/
 
-
+}
 
 .c-input{
     
