--- a/css/screen.css
+++ b/css/screen.css
@@ -163,9 +163,9 @@ img {
     padding: 16px 32px;
 
     margin-top: 30px;
-    color: #fff;
+    color: var(--global-color-neutral-xxxx-dark);
    
-    background: var(--lead-theme-color);
+    background: #fff ;/*var(--lead-theme-color)*/
     background-size: 200% auto;
     overflow: hidden;
 
@@ -173,7 +173,7 @@ img {
     box-shadow: inset 0 0 0 0  var(--lead-theme-color-x-dark) ;
     transition: ease-out 0.3s;
     outline: none;
-   
+    border: 1px solid var(--global-color-neutral-xxxx-dark);
    
 }
 
@@ -181,18 +181,27 @@ img {
 
 
 
+.c-button:hover {
+    /*hover animation*/ 
+      box-shadow: inset 300px 0 0 0 var(--lead-theme-color);
+      color: var(--global-color-neutral-xxxx-light);
+      border: none;
+  
+}  
+
 .c-button:active {
-    color: #ffffff;
+    color: var(--global-color-neutral-xxxx-light);
     
-    background: var(--lead-theme-color-x-dark);
+    background: var(--lead-theme-color);
 
     
-    box-shadow: inset 300px 0 0 0 var(--lead-theme-color-x-dark);
+    box-shadow: inset 300px 0 0 0 var(--lead-theme-color);
 
     animation: shake 0.8s ease-in ;
     
     
 }
+
 
 @keyframes shake{
 
@@ -219,14 +228,10 @@ img {
 
 
 
-.c-button:hover {
-  /*hover animation*/ 
-    box-shadow: inset 300px 0 0 0 var(--lead-theme-color-x-dark);
-
 
 /*INPUT*/
 
-}
+
 
 .c-input{
     
