--- a/css/screen.css
+++ b/css/screen.css
@@ -182,8 +182,9 @@ img {
         letter-spacing: 2px;
         font-size: 13px;
         line-height: 24px;
-        font-weight: 600;
+        font-weight: 400;
         padding: 16px 32px;
+        font-family: 'Roboto';
     
         margin-top: 30px;
         color: var(--global-color-neutral-xxxx-dark);
