--- a/css/screen.css
+++ b/css/screen.css
@@ -101,8 +101,8 @@ html {
 /*GRID*/
 .grid-container {
     display: grid;
-    grid-template-columns:1fr ;
-    grid-template-rows:   1fr ;
+    grid-template-columns:1fr 1fr ;
+    /*grid-template-rows:   1fr ;*/
    
   }
 
