--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,7 @@
 :root{
 
     /* Text colors */
-    --lead-theme-color:rgb(132, 201, 209);
+    --lead-theme-color:#ff5b00;
     --lead-theme-color-x-dark:#63BBC5;
 
 
@@ -90,6 +90,8 @@ html {
     
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+
+    box-sizing: border-box;
 }
 
 
@@ -314,6 +316,71 @@ animation: shake 0.8s ease-in ;
 
   }
 
+
+
+
+  /*MODAL BUTTON*/
+  .c-button-modal{
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    margin-left: 30%;
+
+    position: relative;
+    cursor:pointer;
+
+    /*styling button */
+    background-color: var(--lead-theme-color);
+    color: white;
+    border-radius: 5px;
+    border: 0;
+    padding: 10px 25px;
+    box-shadow: 0 2px 4px rgb(0,0,0,0,2);
+    font-size: 14px;
+  }
+
+  .c-button-modal__text{
+    font: bold 16px 'Quicksand', san-serif;
+    color: #fff;
+    transition: all 0.2s;
+  }
+
+  .button--loading .c-button-modal__text{
+      visibility: hidden;
+      opacity: 0;
+    
+
+  }
+
+  
+  .button--loading::after{
+      content: "";
+      position: absolute;
+      width: 16px;
+      height: 16px;
+     
+      top:0;
+      left:0;
+      right:0;
+      bottom:0;
+      margin:auto;
+      border:4px solid transparent;
+      border-top-color: #fff;
+      border-radius: 50%;
+      animation:button-loading-spinner 1s ease infinite ;
+      
+
+  }
+
+  @keyframes button-loading-spinner{
+    from{
+        transform: rotate(0turn);
+    }
+    to{
+        transform: rotate(1turn);
+    }
+}
+
 /*INPUT*/
 
 
@@ -477,6 +544,64 @@ max-width: 71em; /* 71 * 18px = 1278px */
 display:flex;
 
 }
+
+.modal-container{
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  background-color:rgb(0,0,0,0.3);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  /*hide modal*/
+  opacity: 0;
+
+  pointer-events: none;
+
+  
+
+}
+
+
+.modal-container.show{
+   
+    opacity: 1;
+    pointer-events: auto;
+   
+}
+
+
+
+.modal{
+    background-color: #fff;
+    max-width: 100%;
+    padding: 30px 50px;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgb(0,0,0,0,2);
+    text-align: center;
+}
+
+
+.modal h1{
+    margin:0
+}
+
+
+.modal p{
+ 
+    opacity: 0.7;
+}
+
+
+.chart-html{
+    z-index: 1;
+}
+
+
+
 /*
 Objects: section
 ---
